# config/taxonomy/out_go_server/openapiserver/api_default_service.go
@@ -27,7 +27,7 @@ func NewDefaultApiService() DefaultApiServicer {
 }
 
 // GetPoliciesDecisions - getPoliciesDecisions
-func (s *DefaultApiService) GetPoliciesDecisions(ctx context.Context, input []PolicymanagerRequest) (ImplResponse, error) {
+func (s *DefaultApiService) GetPoliciesDecisions(ctx context.Context, input PolicymanagerRequest) (ImplResponse, error) {
 	// TODO - update GetPoliciesDecisions with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
