# connectors/v2opa/http/api.go
@@ -1,32 +1,0 @@
-/*
- * Some Swagger
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package v2opa
-
-import (
-	"context"
-	"net/http"
-
-	openapiclient "github.com/mesh-for-data/mesh-for-data/pkg/connectors/out_go_client"
-)
-
-// DefaultApiRouter defines the required methods for binding the api requests to a responses for the DefaultApi
-// The DefaultApiRouter implementation should parse necessary information from the http request,
-// pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
-type DefaultApiRouter interface {
-	GetPoliciesDecisions(http.ResponseWriter, *http.Request)
-}
-
-// DefaultApiServicer defines the api actions for the DefaultApi service
-// This interface intended to stay up to date with the openapi yaml used to generate it,
-// while the service implementation can ignored with the .openapi-generator-ignore file
-// and updated with the logic required for the API.
-type DefaultApiServicer interface {
-	GetPoliciesDecisions(context.Context, []openapiclient.PolicymanagerRequest) (ImplResponse, error)
-}
